# pizza-engine-benchmark

./: .gitignore  .gitmodules  CONTRIBUTE.md  Makefile  NOTE_ON_RESULTS.txt  README.md  commands-intersection.txt  commands.txt  corpus_transform.py  format_queries.py  queries.txt  regression.py  results.json  run.sh
docs/: CNAME  index.html  service-worker.js
docs/static/js/: 2.b9a6fc97.chunk.js  2.b9a6fc97.chunk.js.map  runtime-main.07d0b69d.js.map
engines/bleve-0.8.0-boltdb/: Makefile  build_index.go  do_query.go  go.mod  go.sum
engines/bleve-0.8.0-scorch/: Makefile  build_index.go  do_query.go  go.sum
engines/bluge-0.2.2/: Makefile  build_index.go  do_query.go  go.mod  go.sum
engines/lucene/: Makefile
engines/lucene-7.2.1/: Makefile  build.gradle
engines/lucene-7.2.1/src/main/java/: BuildIndex.java  DoQuery.java
engines/lucene-8.0.0/: Makefile  build.gradle
engines/lucene-8.0.0/src/main/java/: DoQuery.java
engines/lucene-8.10.1/: build.gradle
engines/lucene-8.10.1/src/main/java/: DoQuery.java
engines/lucene-8.4.0/: Makefile  build.gradle  query.sh
engines/lucene-9.6.0/: Makefile  build.gradle
engines/lucene-9.6.0/src/main/java/: DoQuery.java
engines/lucene-9.8.0/: Makefile  build.gradle
engines/lucene-9.8.0-bp/: Makefile
engines/lucene-9.8.0/gradle/wrapper/: gradle-wrapper.properties
engines/lucene-9.8.0/src/main/java/: BuildIndex.java  DoQuery.java  ReorderIndex.java
engines/lucene-9.9.2/: Makefile  build.gradle
engines/lucene-9.9.2-bp/: Makefile
engines/lucene-9.9.2/gradle/wrapper/: gradle-wrapper.properties
engines/lucene-9.9.2/src/main/java/: BuildIndex.java
engines/lucene/gradle/wrapper/: gradle-wrapper.properties
engines/lucene/src/main/java/: BuildIndex.java  DoQuery.java
engines/pisa-0.8.2/: .clang-tidy  CMakeLists.txt  Dockerfile  Makefile
engines/pisa-0.8.2/tools/: build_index.cpp  do_query.cpp
engines/pizza-0.1/: Cargo.toml  Makefile
engines/rucene-0.1/: .gitignore  Cargo.toml  Makefile
engines/tantivy/: Cargo.toml  Makefile
engines/tantivy-0.10/: Cargo.toml
engines/tantivy-0.11/: Cargo.toml  Makefile
engines/tantivy-0.16/: Cargo.toml
engines/tantivy-0.17/: Cargo.toml
engines/tantivy-0.18/: Cargo.toml
engines/tantivy-0.20/: Cargo.toml
engines/tantivy-0.21/: Cargo.toml  Makefile
engines/tantivy-0.22/: Cargo.toml
engines/tantivy-0.6/: Cargo.toml  Makefile
engines/tantivy-0.7/: Cargo.toml  Makefile
engines/tantivy-0.8/: Cargo.toml  Makefile
engines/tantivy-0.9/: Cargo.toml  Makefile
src/: client.py  query_counts.py
web/: gulpfile.coffee  index.cjsx  package-lock.json  package.json  style.less
web/output/: index.html  index.js  results.json  style.css
web/public/: index.html
web/src/: index.js  style.scss
