[package]
name = "tantivy-bench"
version = "0.1.0"
authors = ["Jason Wolfe"]
edition = "2018"

[features]
default = []
#default = ["profiling"]
profiling=[]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.5"
futures = "*"
spin = "0.9"

# Internal libs
common = { path = "/Users/medcl/Documents/rust/pizza/lib/common" }
engine = { path = "/Users/medcl/Documents/rust/pizza/lib/engine" }
tracing = "0.1.40"
hashbrown = "0.14.5"
pprof = { version = "0.13", features = ["flamegraph","frame-pointer"] }

[profile.release]
lto = true
opt-level = 3
overflow-checks = false


#####for profiling only
##[profile.dev]
#incremental = true
#debug = "full"
#overflow-checks = false
#opt-level = 0
#strip = false
#lto = false
