[package]
name = "rucene-searchbenchmark"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"

[dependencies]
rucene = { git = "https://github.com/zhihu/rucene", rev="5b55f842" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
