[package]
name = "tantivy-bench"
version = "0.1.0"
authors = ["Jason Wolfe"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = "0.22"
env_logger = "0.5"
futures = "*"
zstd = "0.13.1"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
# debug-assertions = false
