[package]
name = "tantivy-bench"
version = "0.1.0"
authors = ["Jason Wolfe"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = {path="/home/paul/git/tantivy/"}
env_logger = "0.5"
futures = "*"

[profile.release]
lto = true
opt-level = 3
debug = false
overflow-checks = false
# debug-assertions = false
