[package]
name = "tantivy-bench"
version = "0.1.0"
authors = ["Jason Wolfe"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = "0.9"
env_logger = "0.5"
futures = "*"

[profile.release]
lto = true
opt-level = 3
debug = true
overflow-checks = false
# debug-assertions = false
